--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
   background-color: #c7c3be;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
+  border-radius: 10px;;
   padding: 20px 10px;
   border-top: 4px double #706e69;
   border-bottom: 4px double #706e69;
@@ -28,7 +29,8 @@ body {
 .site-header h1 {
   font-family: "montecarlo", cursive;
   font-size: 5rem;
-  color: #897e7e;
+  font-style: italic;
+  color: #7a6e58;
   margin-bottom: 10px;
 }
 
@@ -45,5 +47,61 @@ body {
   background-color: #f1f0f0;
 }
 
+.hero {
+  text-align: center;
+  background-color: #c7c3be;
+  padding: 40px 20px;
+  margin-top: 10px;
+  border-radius: 10px;
+  border-style:double;
+}
 
+.hero img {
+  border-radius: 50px;
+  margin-bottom: 20px;
+  max-width:100%;
+  height: auto;
+}
 
+.hero h2 {
+  font-size: 2rem;
+  font-family: "montecarlo", cursive;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  color: #7a6e58;
+  margin-bottom: 10px;
+}
+
+.hero p {
+  font-size: 1rem;
+  font-style: italic;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  color: #897e7e;
+  margin-bottom: 10px;
+} 
+
+.spa-menu {
+  padding: 50px 25px;
+}
+
+.spa-menu h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #7a6e58;
+}
+
+.spa-menu h3 {
+  margin-top: 30px;
+  color: #7a6e58;
+}
+.spa-menu ul {
+  margin-left: 20px;
+  margin-bottom: 30px;
+}
+
+.spa-menu img {
+  display: block;
+  margin: 20px auto;
+  border-radius: 10px;
+  max-width: 100%;
+  height: auto;
+}
