--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,8 +4,33 @@
   box-sizing: border-box;
 }
 
+.navbar-light {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  background-color: rosybrown;
+
+}
+.navbar-transparent {
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(8px);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-transparent .navbar-brand,
+.navbar-transparent .nav-link {
+  color: #24201a;
+  font-family: "MonteCarlo", serif;
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.navbar-transparent .nav-link:hover {
+  color: #b89c6b;
+}
+
 body {
-  font-family: 'Georgia', serif;
+  padding-top: 100px;
+  font-family: "'Georgia', serif";
   background: url('../images/background.jpg') no-repeat center center fixed;
   background-size: cover;
   text-align: center;
@@ -14,17 +39,16 @@ body {
   padding: 0 20px;
 }
 
+section {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
 .site-header {
-  background-color: #c7c3be;
-  opacity: 0.7;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
-  border-radius: 10px;;
   padding: 50px 25px;
-  border-top: 4px double #706e69;
-  border-bottom: 4px double #706e69;
-  border-left: 4px double #706e69;
-  border-right: 4px double #706e69;
+
 }
 
 .site-header h1 {
@@ -33,19 +57,6 @@ body {
   font-style: italic;
   color: #7a6e58;
   margin-bottom: 10px;
-}
-
-.main-nav a {
-  margin: 0 10px;
-  text-decoration: none;
-  color: #897e7e;
-  font-style: italic;
-  padding: 6px 10px;
-  border-radius: 3px;
-}
-
-.main-nav :hover {
-  background-color: #f1f0f0;
 }
 
 .hero {
@@ -232,11 +243,10 @@ legend {
   background-color: #a48859;
 }
 
-/* ====== Footer ====== */
 .site-footer {
   text-align: center;
   padding: 20px;
-  background-color: #e8dfd3;
+  background-color: rgba(232, 223, 211, 0.8);
   color: #7a6e58;
   font-size: 0.9rem;
   margin-top: 40px;
