--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
 .navbar-transparent .nav-link {
   color: #24201a;
   font-family: "MonteCarlo", serif;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -29,13 +29,13 @@
 }
 
 body {
-  padding-top: 100px;
   font-family: "'Georgia', serif";
   background: url('../images/background.jpg') no-repeat center center fixed;
   background-size: cover;
   text-align: center;
   color: #897e7e;
   line-height: 1.6;
+  margin: 20px;
   padding: 0 20px;
 }
 
@@ -47,8 +47,8 @@ section {
 .site-header {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
-  padding: 50px 25px;
-
+  margin-top: 80px;
+  padding-bottom: 20px;
 }
 
 .site-header h1 {
@@ -56,12 +56,13 @@ section {
   font-size: 5rem;
   font-style: italic;
   color: #7a6e58;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .hero {
   text-align: center;
-  padding: 50px 25px;
+  padding: 40px 25px;
   margin-top: 10px;
   border-radius: 10px;
   border-style:double;
@@ -75,7 +76,7 @@ section {
 }
 
 .hero h2 {
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: "montecarlo", cursive;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   color: #7a6e58;
@@ -83,7 +84,7 @@ section {
 }
 
 .hero p {
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-style: italic;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   color: #897e7e;
@@ -91,13 +92,8 @@ section {
 } 
 
 .spa-menu {
-  padding: 50px 25px;
+  padding: 40px 20px;
   margin: 25px 0;
-  border-radius: 10px;
-  border-top: 4px double #706e69;
-  border-bottom: 4px double #706e69;
-  border-left: 4px double #706e69;
-  border-right: 4px double #706e69;
 }
 
 .spa-menu h2 {
@@ -107,8 +103,9 @@ section {
 }
 
 .spa-menu h3 {
-  margin-top: 40px;
+  margin-top: 30px;
   color: #897e7e;
+
 }
 .spa-menu ul {
   margin-left: 20px;
@@ -124,8 +121,8 @@ section {
 }
 
 #wellness {
-  padding: 50px 25px;
-  margin: 25px 0;
+  padding: 40px 20px;
+  margin: 50px 0;
   border-radius: 10px;
   border-top: 4px double #706e69;
   border-bottom: 4px double #706e69;
@@ -145,14 +142,9 @@ section {
 }
 
 #testimonials {
-  padding: 50px 25px;
+  padding: 40px 20px;
   border-radius: 10px;
-  border-top: 4px double #706e69;
-  border-bottom: 4px double #706e69;
-  border-left: 4px double #706e69;
-  border-right: 4px double #706e69;
 }
-
 
 #testimonials h2 {
   margin: 25px 0;
@@ -170,23 +162,24 @@ section {
 }
 
 #book-appointment {
-  margin: 25px 0;
-  padding: 10px 15px;
+  margin-bottom: 30px;
+  padding: 40px 20px 20px;
   border-radius: 10px;
   border-top: 4px double #706e69;
   border-left: 4px double #706e69;
   border-right: 4px double #706e69;
   border-bottom: 4px double #706e69;
+  text-align: center;
 }
 
 #book-appointment h2 {
   color:#7a6e58;
-  margin-bottom: 15px;
-  margin-top: 15px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 form {
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
   padding: 30px;
   border-top: 4px double #706e69;
