--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,8 @@ section {
   font-style: italic;
 }
 
+
+
 .site-header {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
@@ -101,16 +103,17 @@ section {
   font-style: italic;
 }
 
+#spa-menu h2 {
+  color: #7a6e58;
+  font-weight: bold;;
+}
 .spa-menu h2 {
   text-align: center;
-  text-decoration: underline;
-  margin-bottom: 30px;
-  color: #7a6e58;
+
 }
 
 .spa-menu h3 {
   margin-top: 30px;
-  color: #897e7e;
 
 }
 .spa-menu ul {
@@ -135,7 +138,8 @@ section {
 }
 
 #wellness h2 {
-  color: #685b4c;
+  font-weight: bold;
+  color: #7a6e58;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -146,8 +150,10 @@ section {
 }
 
 
-#testimonials {
+#testimonials h2 {
   color:#685b4c;
+  font-weight: bold;
+
 }
 
 .carousel {
@@ -179,6 +185,7 @@ section {
 
 #book-appointment h2 {
   margin: 0 auto;
+  font-weight: bold;
   color:#7a6e58;
   text-align: center;
   margin: 30px 0;
