--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
 
 .navbar-transparent .navbar-brand,
 .navbar-transparent .nav-link {
-  color: #24201a;
+  color: #2e2826;
   font-family: "MonteCarlo", serif;
   font-size: 1.5rem;
   font-weight: 600;
