--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,11 +105,8 @@ section {
 
 #spa-menu h2 {
   color: #7a6e58;
-  font-weight: bold;;
-}
-.spa-menu h2 {
+  font-weight: bold;
   text-align: center;
-
 }
 
 .spa-menu h3 {
